--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://brunaemateus.vercel.app"> <!-- Preencher com o link do deploy -->
     
-    <!-- Favicon (M&B Dourado Vector Base64) -->
-    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='white'/><text x='50' y='65' font-family='Cormorant Garamond, serif' font-size='50' fill='%23C9A96E' text-anchor='middle'>M&amp;B</text></svg>">
+    <!-- Favicon (Emoji Aliança) -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💍</text></svg>">
     
     <!-- Custom CSS -->
     <link rel="stylesheet" href="styles.css">
